--- a/api/package.json
+++ b/api/package.json
@@ -44,6 +44,7 @@
     "helmet": "^3.20.0",
     "nedb": "^1.8.0",
     "serve-favicon": "^2.5.0",
+    "shortid": "^2.2.15",
     "winston": "^3.0.0"
   },
   "devDependencies": {
