--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,7 @@
     "config": "config/"
   },
   "engines": {
-    "node": "^12.10.0",
+    "node": ">= 10.16.0",
     "yarn": ">= 0.18.0"
   },
   "scripts": {
