--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@feathersjs/client": "^4.3.3",
     "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
