--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-hook-form": "^6.11.3",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "roll-parser": "^2.3.2",
