--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,11 +21,14 @@ jobs:
         node-version: [10.x, 12.x, 14.x]
 
     steps:
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2.1.2
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: npm install
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
