--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
+    "redux-saga": "^1.1.3",
     "roll-parser": "^2.3.2",
     "socket.io-client": "^2.3.0",
     "superagent": "^5.1.0"
