--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,13 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
+    "@reduxjs/toolkit": "^1.5.0",
+    "autodux": "^5.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-hook-form": "^6.11.3",
+    "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
