--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,7 +8,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/styles": "^4.5.0",
     "@reduxjs/toolkit": "^1.5.0",
-    "autodux": "^5.0.3",
+    "immer": "^8.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
@@ -18,6 +18,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
+    "robodux": "^9.0.3",
     "roll-parser": "^2.3.2",
     "socket.io-client": "^2.3.0",
     "superagent": "^5.1.0"
